--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "@minimal/material-kit-react",
-  "author": "minimals.cc",
-  "licence": "MIT",
-  "version": "1.5.0",
-  "private": false,
+  "name": "crsfrontend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -49,6 +47,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "apexcharts": "^3.35.3",
     "change-case": "^4.1.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
