--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@mui/material": "^5.8.6",
     "@testing-library/jest-dom": "^5.16.4",
     "apexcharts": "^3.35.3",
+    "axios": "^0.27.2",
     "change-case": "^4.1.2",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
